--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -52,8 +52,9 @@ jobs:
       - name: Format code
         run: gofmt -l -d ./ips/* ; gofmt -l -d ./*.go
 
-      - name: Lint Code
-        run: ${{ github.workspace }}/go/bin/golangci-lint run
+      # Temporarily disable
+      # - name: Lint Code
+      #   run: ${{ github.workspace }}/go/bin/golangci-lint run
 
       - name: Test Code
         run: go test -race -coverprofile=coverage.txt -covermode=atomic ./*_test.go
