--- a/test/docker-compose-prod.yml
+++ b/test/docker-compose-prod.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 networks:
   proxy:
     internal: true
@@ -7,7 +5,7 @@ networks:
 
 services:
   whoami:
-    image: traefik/whoami:v1.8.1
+    image: traefik/whoami:latest
     depends_on:
       - traefik
     networks:
