--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 networks:
   proxy:
     internal: true
@@ -7,7 +5,7 @@ networks:
 
 services:
   whoami:
-    image: traefik/whoami:v1.8.1
+    image: traefik/whoami:latest
     depends_on:
       - traefik
     networks:
@@ -37,6 +35,6 @@ services:
       - ./traefik-compose.toml:/etc/traefik/traefik.toml
       - ./logs:/var/logs/traefik
       - ./tempconfig:/etc/traefik/mconfig
-      - ../:/plugins-local/src/github.com/BetterCorp/cloudflarewarp:ro
+      - ../:/plugins-local/src/github.com/PseudoResonance/cloudflarewarp:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /etc/localtime:/etc/localtime:ro
