Update CI formatting

--- a/test/traefik-prod.toml
+++ b/test/traefik-prod.toml
@@ -42,4 +42,4 @@
   [experimental.plugins]
     [experimental.plugins.cloudflarewarp]
       moduleName = "github.com/PseudoResonance/cloudflarewarp"
-      version = "v1.4.0"
+      version = "1.4.1"
