--- a/.github/workflows/prodTest.yml
+++ b/.github/workflows/prodTest.yml
@@ -2,16 +2,16 @@ name: Test production tag
 
 on:
   workflow_dispatch:
-  # push:
-  #   tags:        
-  #     - 'v*' 
+  push:
+    tags:
+      - "v*"
 
 jobs:
   prodTest:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -20,7 +20,7 @@ jobs:
 
       - name: Upload log artifacts
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: logs
           if-no-files-found: error
