--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -5,9 +5,25 @@ on:
   push:
     branches:
     - "*"
+    paths-ignore:
+    - '.gitattributes'
+    - '.gitignore'
+    - 'LICENSE'
+    - 'README.md'
+    - '.vscode/**'
+    - '.devcontainer/**'
+    - '.assets/**'
   pull_request:
     branches:
     - "*"
+    paths-ignore:
+    - '.gitattributes'
+    - '.gitignore'
+    - 'LICENSE'
+    - 'README.md'
+    - '.vscode/**'
+    - '.devcontainer/**'
+    - '.assets/**'
 
 jobs:
   build:
