--- a/.github/workflows/codacyAnalysis.yml
+++ b/.github/workflows/codacyAnalysis.yml
@@ -12,10 +12,26 @@ on:
   push:
     branches:
     - "*"
+    paths-ignore:
+    - '.gitattributes'
+    - '.gitignore'
+    - 'LICENSE'
+    - 'README.md'
+    - '.vscode/**'
+    - '.devcontainer/**'
+    - '.assets/**'
   pull_request:
     # The branches below must be a subset of the branches above
     branches:
     - "*"
+    paths-ignore:
+    - '.gitattributes'
+    - '.gitignore'
+    - 'LICENSE'
+    - 'README.md'
+    - '.vscode/**'
+    - '.devcontainer/**'
+    - '.assets/**'
   schedule:
   - cron: "22 18 * * 0"
 
