--- a/.github/workflows/codeqlAnalysis.yml
+++ b/.github/workflows/codeqlAnalysis.yml
@@ -15,10 +15,26 @@ on:
   push:
     branches:
     - "*"
+    paths-ignore:
+    - '.gitattributes'
+    - '.gitignore'
+    - 'LICENSE'
+    - 'README.md'
+    - '.vscode/**'
+    - '.devcontainer/**'
+    - '.assets/**'
   pull_request:
     # The branches below must be a subset of the branches above
     branches:
     - "*"
+    paths-ignore:
+    - '.gitattributes'
+    - '.gitignore'
+    - 'LICENSE'
+    - 'README.md'
+    - '.vscode/**'
+    - '.devcontainer/**'
+    - '.assets/**'
   schedule:
   - cron: "30 18 * * 5"
 
