Update tests to be stricter

--- a/test/config/fail.toml
+++ b/test/config/fail.toml
@@ -4,5 +4,4 @@
     [http.middlewares.cloudflarewarp]
       [http.middlewares.cloudflarewarp.plugin]
         [http.middlewares.cloudflarewarp.plugin.cloudflarewarp]
-          trustip = [
-          ]
+          disableDefault = true
