--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,8 @@ jobs:
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
     - name: Bump Version
+      env:
+        ENVIRONMENT: ci
       run: bash ./util/ci_publish.sh ${{ github.event.inputs.versionType }} "${{ github.event.inputs.versionDescription }}"
 
     - name: Create release
